<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="home_title">My Nanodegree Apps!</string>
    <string name="btn_title_popular_movies">Popular Movies</string>
    <string name="btn_title_stock_hawk">Stock Hawk</string>
    <string name="btn_title_build_it_bigger">Build it bigger</string>
    <string name="btn_title_make_app_material">Make your app material</string>
    <string name="btn_title_go_ubiquitous">Go Ubiquitous</string>
    <string name="btn_title_capstone">Capstone</string>
</resources>
